# goban-watcher

./: .gitignore  README.md  baduk.py  client.py  game.py  main.py  pyproject.toml  requirements.txt  server.py
app/: main.py
backup/: corners.json
data/: corners.json  katago_results.json
detection/: first_test.py  open_camera.py
katago/: katago_analyse.py  katago_gtp.py  utils.py
katago/configs/: analysis_example.cfg
katago/testfiles/: input.json  output.txt  output_analysis.json  output_gtp.json
notebooks/: 0_classification.ipynb  1_katago_analysis.ipynb  1_prediction_corners.ipynb  2_katago_analysis.ipynb  katago_results.json
sgf/: 1.sgf  10.sgf  11.sgf  12.sgf  13.sgf  14.sgf  15.sgf  16.sgf  17.sgf  18.sgf  19.sgf  2.sgf  20.sgf  3.sgf  4.sgf  5.sgf  6.sgf  7.sgf  8.sgf  9.sgf
src/: 0_classification.py  1_predcition_corners.ipynb  __init__.py  combination_amount.py  custom_logger.py  data_generation.py  evaluate_board.py  labelling.py  main.py  movement_detection.py  open_camera.py  sgf_downloader.py  stone_classification.py
src/analysis/: analyse_games_with_katago.py  katago_parser.py  katago_selfplay.py  missing_moves_contain_captures.py
src/data_generation/: image_creation.py  open_camera.py  record_games.py
src/game/: baduk.py
src/labelling/: app.py  labelling.py  labelling_with_sgf.py  main.py  verify_labelling.py
src/utils/: game.py  (+10 more)
temp_scripts/: combination_amount.py  open_camera.py  pygame_go.py  sgf_downloader.py
tools/: game.py  katago_parser.py  labelling.py  sgf_downloader.py
visualizer/: index.html  script.js  style.css
(+10 files in other folders)
